--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -218,13 +218,27 @@ services:
       file: common-config.yml
       service: microservice-deploy-config
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.2.5
+  # here we configure keycloak to handle all internal microservice traffic via 8080
+  # also we expose only 7080 for external comms
+    ports:
+      - "7080:8080"
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    extends:
+      file: common-config.yml
+      service: microservice-network-config
+
   redis:
     image: redis
     ports:
       - "6379:6379"
     #   props to define health check test for accounts using curl cmd
     healthcheck:
-      #   refer docs for the right health checks
+    #   refer docs for the right health checks
       test: ["CMD-SHELL","redis-cli ping | grep PONG"]
       timeout: 10s
       retries: 10
@@ -268,10 +282,10 @@ services:
       service: microservice-db-configuration
 
   accounts:
-    image: "mrlearn/accounts:v1.8"
+    image: "mrlearn/accounts:v1.9"
     container_name: accounts-ms
-    ports:
-      - "8080:8080"
+    #   ports will be closed as we configure microservice app to communicate only post auth via keycloak
+    #   communication will occur only using internal network
     #   props to define health check test for accounts using curl cmd
     healthcheck:
       test: "curl --fail -silent http://localhost:8080/actuator/health | grep UP || exit 1"
@@ -297,10 +311,10 @@ services:
       OTEL_SERVICE_NAME: "accounts"
 
   loans:
-    image: "mrlearn/loans:v1.8"
+    image: "mrlearn/loans:v1.9"
     container_name: loans-ms
-    ports:
-      - "8090:8090"
+    #   ports will be closed as we configure microservice app to communicate only post auth via keycloak
+    #   communication will occur only using internal network
     #   props to define health check test for loans using curl cmd
     healthcheck:
       test: "curl --fail -silent http://localhost:8090/actuator/health | grep UP || exit 1"
@@ -326,7 +340,7 @@ services:
       OTEL_SERVICE_NAME: "loans"
 
   loans1:
-    image: "mrlearn/loans:v1.8"
+    image: "mrlearn/loans:v1.9"
     container_name: loans-ms1
     ports:
       - "8091:8090"
@@ -355,10 +369,10 @@ services:
       OTEL_SERVICE_NAME: "loans1"
 
   cards:
-    image: "mrlearn/cards:v1.8"
+    image: "mrlearn/cards:v1.9"
     container_name: cards-ms
-    ports:
-      - "9000:9000"
+    #   ports will be closed as we configure microservice app to communicate only post auth via keycloak
+    #   communication will occur only using internal network
     #   props to define health check test for cards using curl cmd
     healthcheck:
       test: "curl --fail -silent http://localhost:9000/actuator/health | grep UP || exit 1"
@@ -384,7 +398,7 @@ services:
       OTEL_SERVICE_NAME: "cards"
 
   configserver:
-    image: "mrlearn/configserver:v1.8"
+    image: "mrlearn/configserver:v1.9"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -406,7 +420,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "mrlearn/eurekaserver:v1.8"
+    image: "mrlearn/eurekaserver:v1.9"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -433,7 +447,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   gatewayserver:
-    image: "mrlearn/gatewayserver:v1.8"
+    image: "mrlearn/gatewayserver:v1.9"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -467,6 +481,7 @@ services:
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
       SPRING_DATA_REDIS_TIMEOUT: 1s
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     #  app name for otel to identify
       OTEL_SERVICE_NAME: "gatewayserver"
   rabbit:
