--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -109,6 +109,14 @@
 			<version>${otelVersion}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -130,7 +138,7 @@
 				<version>3.4.5</version>
 				<configuration>
 					<to>
-						<image>mrlearn/${project.artifactId}:v1.9</image>
+						<image>mrlearn/${project.artifactId}:v1.10</image>
 					</to>
 				</configuration>
 			</plugin>
