--- a/docker-compose/qa/common-config.yml
+++ b/docker-compose/qa/common-config.yml
@@ -5,6 +5,7 @@ services:
     networks:
       - bankeasy
 
+
   microservice-deploy-config:
     extends:
       microservice-network-config
@@ -17,6 +18,15 @@ services:
     environment:
       #   override the hostname via the below prop as defined from docs
       SPRING_RABBITMQ_HOST: "rabbit"
+      #   jar / java agent that peers into JVM and performs at runtime telemetry operations
+      JAVA_TOOL_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-1.32.0.jar"
+      #   data endpoint to which java agent pushes the trace information
+      #   otel uses 4318 for http connection , 4317 for gRPC
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4317
+      #   since metric info is scraped via prometheus
+      OTEL_LOGS_EXPORTER: none
+      OTEL_EXPORTER_OTLP_PROTOCOL: grpc
+      OTEL_LOG_LEVEL: debug
 
   microservice-configserver-config:
     extends:
