--- a/message/pom.xml
+++ b/message/pom.xml
@@ -42,6 +42,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-function-context</artifactId>
 		</dependency>
 		<dependency>
@@ -101,7 +105,7 @@
 				<version>3.4.5</version>
 				<configuration>
 					<to>
-						<image>mrlearn/${project.artifactId}:v1.10</image>
+						<image>mrlearn/${project.artifactId}:v1.11</image>
 					</to>
 				</configuration>
 			</plugin>
