--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -104,6 +104,14 @@
 			<version>${otelVersion}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -125,7 +133,7 @@
 				<version>3.4.5</version>
 				<configuration>
 					<to>
-						<image>mrlearn/${project.artifactId}:v1.10</image>
+						<image>mrlearn/${project.artifactId}:v1.11</image>
 					</to>
 				</configuration>
 			</plugin>
