--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -2,26 +2,26 @@ spring:
   application:
     name: "configserver"
   profiles:
-# active: native
+    # active: native
     active: git
   cloud:
     config:
       server:
-#       Here we use native props to define local system config loctions
-#       native:
-#       search-locations: "classpath:/config"
+        #       Here we use native props to define local system config loctions
+        #       native:
+        #       search-locations: "classpath:/config"
         git:
           uri: "https://github.com/sadiq1aziz/bankeasy-config.git"
-#             default branch
+          #             default branch
           default-label: main
-#             ensure that the github repo is cloned on application start
-#             rather than at time of request to the server from microservice app
+          #             ensure that the github repo is cloned on application start
+          #             rather than at time of request to the server from microservice app
           clone-on-start: true
-#             perform timeout when not able to connect to config server in the fixed duration
+          #             perform timeout when not able to connect to config server in the fixed duration
           timeout: 5
-#             disregard local changes and always refer github repo for configs on start
+          #             disregard local changes and always refer github repo for configs on start
           force-pull: true
-# Config details to connect to rabbit messaging broker
+  # Config details to connect to rabbit messaging broker
   rabbitmq:
     host: "localhost"
     port: 5672
@@ -44,17 +44,19 @@ management:
     health:
       probes:
         enabled: true
-# Micrometer configuration to monitor app health
+  # Micrometer configuration to monitor app health
   metrics:
     logs:
       application: ${spring.application.name}
 
 logging:
+#  can be used to configure debugging settings for whichever
+#  spring component fails using respective config locale
   level:
     com:
       bankeasy:
         configserver: DEBUG
-# log pattern for distributed tracing via open telemetry
+  # log pattern for distributed tracing via open telemetry
   pattern:
     level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
